--- a/.github/workflows/01-basic-docker-build.yaml
+++ b/.github/workflows/01-basic-docker-build.yaml
@@ -1,6 +1,5 @@
 name: 01 Basic Docker Build
 
-# condition to trigger
 on:
   push:
     branches:
@@ -13,8 +12,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v5
+
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v5
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -24,3 +26,5 @@ jobs:
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: victorpham28101997/github-action-test:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
