--- a/.github/workflows/01-basic-docker-build.yaml
+++ b/.github/workflows/01-basic-docker-build.yaml
@@ -1,4 +1,4 @@
-name: 01 Basic Docker Build
+name: Basic Docker Build
 
 on:
   push:
@@ -11,6 +11,9 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -28,3 +31,4 @@ jobs:
           tags: victorpham28101997/github-action-test:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
